# deloop

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: main.yml
src/: deloop.rs  main.rs  ui.rs
