[package]
name = "deloop"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "2.1.0"
anyhow = "1.0.42"
lazy_static="1.4.0"
assert_fs = "1.0.3"
spectral = "0.6.0"
eframe = "0.13.1"